crates/ars-collections/tests/ui/tab_key_int_overflow.stderr
error: TabKey int keys must be non-negative integer literals that fit in u64
 --> tests/ui/tab_key_int_overflow.rs:5:21
  |
5 |     #[tab_key(int = 18446744073709551616)]
  |                     ^^^^^^^^^^^^^^^^^^^^
